--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,6 +1,7 @@
 .tweet-container {
   width: 95%;
   margin-left:2.5%;
+  margin-right:2.5%;
 }
 
 article {
@@ -41,6 +42,7 @@ article header img {
 
 article .tweet {
   margin: 10px 10px 20px 10px;
+  word-wrap: break-word;
 }
 
 article footer {
